Update readme - copyright

--- a/README
+++ b/README
@@ -18,3 +18,7 @@ INSTALLATION
 ------------
 
 see http://www.symfony-project.org/getting-started/1_4/en/
+
+LIFE AFTER 1.4.20
+-----------------
+Most patches comes from https://github.com/Virtuvia/symfony1
