Added support PHP 7.4 and PHP 8.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+12/28/20: Version 1.4.21
+------------------------
+* added support of PHP 7.4 and PHP 8.4
+
 11/25/12: Versions 1.4.20
 -------------------------
 
